custom-elk.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: boring-project
  annotations:
    linkerd.io/inject: enabled
---
# Elasticsearch Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: boring-project
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.io/elasticsearch:7.17.13
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
---
# Elasticsearch Service
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: boring-project
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: http
    - name: transport
      port: 9300
      targetPort: transport
---
# Kibana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: boring-project
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.io/kibana:7.17.13
          ports:
            - containerPort: 5601
              name: http
---
# Kibana Service
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: boring-project
spec:
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601
      targetPort: http
---
# Fluent Bit DaemonSet
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: boring-project
  labels:
    k8s-app: fluent-bit
spec:
  selector:
    matchLabels:
      name: fluent-bit
  template:
    metadata:
      labels:
        name: fluent-bit
    spec:
      serviceAccountName: default
      containers:
        - name: fluent-bit
          image: cr.fluentbit.io/fluent/fluent-bit:2.1.8
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: config
              mountPath: /fluent-bit/etc/
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: config
          configMap:
            name: fluent-bit-config
